--- a/posts/1_penguin/index.qmd
+++ b/posts/1_penguin/index.qmd
@@ -9,40 +9,60 @@ image: "image.jpg"
 
 
 ```{python}
-#팔머펭귄 데이터 불러오기
-# pip install palmerpenguins
 import numpy as np
 import pandas as pd
 from palmerpenguins import load_penguins
-penguins=load_penguins()
+
+# 1. 데이터 불러오기 및 기본 정보 출력
+penguins = load_penguins()
 penguins.info()
 
-# 각 펭귄 종별 특징 알아내서 발표
-
-penguins
-column_index = pd.DataFrame(penguins)
-
-summary = penguins.groupby(['species'])[['bill_length_mm', 'bill_depth_mm', 'flipper_length_mm', 'body_mass_g']]
+# 2. 결측치 제거 및 종별 통계량 계산
+penguins = penguins.dropna()
+summary = penguins.groupby('species')[['bill_length_mm', 'bill_depth_mm', 'flipper_length_mm', 'body_mass_g']]
 stats = summary.agg(['min', 'max', 'median', 'mean'])
-stats
-# Adelie,Chinstrap,Gentoo 
-# 펭귄의 부리 길이, 너비, 날개 길이,몸무게 최대, 최소, 중간값, 편차 값
+print("Species별 통계량:")
+print(stats)
 
+# 3. 각 측정값별 최대/최소 값을 가진 종 확인
+max_species = summary.idxmax()
+max_values = summary.max()
+min_species = summary.idxmin()
+min_values = summary.min()
+
+# 1. 종별 통계량 계산 (stats DataFrame)
+stats = summary.agg(['min', 'max', 'median', 'mean'])
+
+# 2. stats의 MultiIndex 컬럼에서 'mean'만 추출
+mean_stats = stats.xs('mean', axis=1, level=1)
+
+# 3. 각 측정치별로 최대/최소값과 해당 종 구하기
+max_species = mean_stats.idxmax()
+max_values = mean_stats.max()
+min_species = mean_stats.idxmin()
+min_values = mean_stats.min()
+
+# 4. 결과 DataFrame 생성: index는 각 측정치 이름이 됨
 extreme_species = pd.DataFrame({
-    "Max Species": max_species.values,
-    "Max Value": max_values.values,
-    "Min Species": min_species.values,
-    "Min Value": min_values.values
-    }, index=["bill_length_mm", "bill_depth_mm", "flipper_length_mm", "body_mass_g"])
-    
-extreme_species# 부리 길이, 넓이, 날개 길이, 몸무게 별 종별 최대, 최소 평균값
+    "Max Species": max_species,
+    "Max Value": max_values,
+    "Min Species": min_species,
+    "Min Value": min_values
+})
 
+print(extreme_species)
+
+print("\n각 측정값별 최대/최소 값을 가진 종:")
+print(extreme_species)
+
+# 4. 서식지별, 성별, 종별 개체 수 집계
 result = penguins.groupby(['island', 'species', 'sex']).size().reset_index(name='count')
-result# 서식지별 종,성별, 그리고 마리수 정보
-
+print("\n서식지, 종, 성별 별 개체 수:")
+print(result)
 
 result2 = penguins.groupby(['island', 'species']).size().reset_index(name='count')
-result2 #서식지별 펭귄 종류및 마리수
+print("\n서식지와 종별 개체 수:")
+print(result2)
 
 ```
 
