--- a/about.qmd
+++ b/about.qmd
@@ -12,8 +12,8 @@ about:
       href: https://linkedin.com
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/ParkHansl
 
 ---
 
-About this blog
+통계와 데이터 분석을 공부 중
