--- a/posts/1_penguin/index.qmd
+++ b/posts/1_penguin/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Post With Code"
-author: "Harlow Malloc"
-date: "2025-03-06"
+title: "Analysis of Palmer Penguins"
+author: "LS_team_5"
+date: "2025-03-07"
 categories: [news, code, analysis]
 image: "image.jpg"
 ---
