--- a/posts/1_penguin/index.qmd
+++ b/posts/1_penguin/index.qmd
@@ -1,12 +1,21 @@
 ---
 title: "Analysis of Palmer Penguins"
 author: "LS_team_5"
+format:
+  html:
+    toc: true
+    number-sections: true
+    theme: cerulean
+
+    highlight: breeze
+    code-folding: true
+    search : true
+
+
 date: "2025-03-07"
 categories: [news, code, analysis]
 image: "image.jpg"
 ---
-
-
 
 ```{python}
 import numpy as np
@@ -66,11 +75,8 @@ print(result2)
 
 ```
 
----
-title: "팔머펭귄 종별 특징 분석 _ 5조(김예원, 박한슬, 송성필)"
-format: html
-jupyter: python3
----
+
+
 
 ## 1. 분석 개요 및 목표
 
