--- a/posts/1_penguin/index.qmd
+++ b/posts/1_penguin/index.qmd
@@ -78,20 +78,20 @@ print(result2)
 
 
 
-## 1. 분석 개요 및 목표
+## 분석 개요 및 목표
 
 -   펭귄 3종(Adelie, Gentoo, Chinstrap)별 특징을 알아보자!
 
-## 2. 데이터소개
+## 데이터소개
 
 -   **주요 변수:**
     -   **신체 특성:** 부리 길이(`bill_length_mm`), 부리 깊이(`bill_depth_mm`), 날개 길이(`flip_len_mm`), 체중(`body_mass_g`)
     -   **서식지:** 섬(`island`), 종(`species`), 성별(`sex`)
     -   **연도:** 데이터 수집 연도(`year`)
 
-## 3. 분석 내용
+## 분석 내용
 
-#### 3.1 종별 서식지
+#### 종별 서식지
 
 |         | Adelie | Gentoo | Chinstrap |
 |:-------:|:------:|:------:|:---------:|
@@ -113,9 +113,9 @@ Chinstrap펭귄은 Dream섬에서만 서식한다.
 
 Adelie펭귄은 Torgers, Biscoe, Dream 전지역에서 서식한다.
 
-## 3.2 종별 신체 특성
+## 종별 신체 특성
 
-#### 3.2.1 종별 부리 길이(최소/최대/중앙값/평균)
+#### 종별 부리 길이(최소/최대/중앙값/평균)
 
 | species | ('bill_length_mm', 'min') | ('bill_length_mm', 'max') | ('bill_length_mm', 'median') | ('bill_length_mm', 'mean') |
 |:--------------|--------------:|--------------:|--------------:|--------------:|
@@ -127,7 +127,7 @@ Adelie펭귄은 Torgers, Biscoe, Dream 전지역에서 서식한다.
 2.  Chinstrap 펭귄이 가장 긴 부리를 가지며, 평균적으로 48.83mm로 측정됨.
 3.  Gentoo 펭귄의 부리 길이는 Chinstrap보다는 짧지만, Adelie보다는 길다.
 
-#### 3.2.2 종별 부리 넓이(최소/최대/중앙값/평균)
+#### 종별 부리 넓이(최소/최대/중앙값/평균)
 
 | species | ('bill_depth_mm', 'min') | ('bill_depth_mm', 'max') | ('bill_depth_mm', 'median') | ('bill_depth_mm', 'mean') |
 |:--------------|--------------:|--------------:|--------------:|--------------:|
@@ -141,7 +141,7 @@ Adelie펭귄은 Torgers, Biscoe, Dream 전지역에서 서식한다.
 3. Gentoo 펭귄의 부리 길이는 Chinstrap보다는 짧지만, Adelie보다는 길다.
 ```
 
-#### 3.2.3 종별 날개 길이(최소/최대/중앙값/평균)
+#### 종별 날개 길이(최소/최대/중앙값/평균)
 
 | species | ('flip_len_mm', 'min') | ('flip_len_mm', 'max') | ('flip_len_mm', 'median') | ('flip_len_mm', 'mean') |
 |:--------------|--------------:|--------------:|--------------:|--------------:|
@@ -153,7 +153,7 @@ Adelie펭귄은 Torgers, Biscoe, Dream 전지역에서 서식한다.
 2.  Adelie 펭귄의 날개 길이가 가장 짧음 (평균 189.95mm)
 3.  Chinstrap 펭귄은 Adelie와 Gentoo 사이에 위치 (평균 195.82mm)
 
-#### 3.2.4 종별 몸무게(최소/최대/중앙값/평균)
+#### 종별 몸무게(최소/최대/중앙값/평균)
 
 | species | ('body_mass_g', 'min') | ('body_mass_g', 'max') | ('body_mass_g', 'median') | ('body_mass_g', 'mean') |
 |:--------------|--------------:|--------------:|--------------:|--------------:|
@@ -165,7 +165,7 @@ Adelie펭귄은 Torgers, Biscoe, Dream 전지역에서 서식한다.
 2. Adelie와 Chinstrap 펭귄의 평균 체중은 비슷하지만, Chinstrap이 약간 더 무거움.
 3. **Adelie 펭귄의 최소 체중(2850g)**이 가장 가벼움, 반면 **Gentoo 펭귄의 최대 체중(6300g)**이 가장 무거움.
 
-## 3.3 평균 요약
+## 평균 요약
 
 |           | bill_length_mm | bill_depth_mm | flipper_length_mm | body_mass_g |
 |:----------|---------------:|--------------:|------------------:|------------:|
@@ -173,7 +173,7 @@ Adelie펭귄은 Torgers, Biscoe, Dream 전지역에서 서식한다.
 | Gentoo    |        47.5049 |       14.9821 |           217.187 |     5076.02 |
 | Chinstrap |        48.8338 |       18.4206 |           195.824 |     3733.09 |
 
-## 3.4 서식지별 펭귄 정보
+## 서식지별 펭귄 정보
 
 |     | island    | species   | sex    | count |
 |----:|:----------|:----------|:-------|------:|
@@ -204,7 +204,7 @@ Adelie펭귄은 Torgers, Biscoe, Dream 전지역에서 서식한다.
 2.  Chinstrap 펭귄은 Dream 섬에만 분포 (총 68마리).
 3.  Adelie 펭귄은 모든 섬에 걸쳐 서식하지만, 개체 수가 비교적 고르게 분포됨.
 
-## 3.5 연도별 조사 표본 수
+## 연도별 조사 표본 수
 
 |     | year | total_count |
 |:----|:----:|:-----------:|
@@ -212,7 +212,7 @@ Adelie펭귄은 Torgers, Biscoe, Dream 전지역에서 서식한다.
 | 1   | 2008 |     114     |
 | 2   | 2009 |     120     |
 
-## 4. 종합 결론
+## 종합 결론
 
 ```         
 • 부리 길이: Chinstrap 펭귄 > Gentoo 펭귄 > Adelie 펭귄
@@ -222,7 +222,7 @@ Adelie펭귄은 Torgers, Biscoe, Dream 전지역에서 서식한다.
 • 개체 수: Biscoe 섬에 Gentoo 펭귄이 가장 많고, Dream 섬에는 Chinstrap 펭귄만 존재.
 ```
 
-## 5. 개선사항
+## 개선사항
 
 -   데이터 해석 과정에서 오류가 있을 수 있음
 
