--- a/posts/1_penguin/index.qmd
+++ b/posts/1_penguin/index.qmd
@@ -8,7 +8,7 @@ format:
     theme: cerulean
 
     highlight: breeze
-    code-folding: true
+    code-fold: true
     search : true
 
 
@@ -16,6 +16,8 @@ date: "2025-03-07"
 categories: [news, code, analysis]
 image: "image.jpg"
 ---
+
+![](pp.jpg)
 
 ```{python}
 import numpy as np
